# autocsfmask

./: .gitignore  autocsfmask.py  pyproject.toml  setup.py
autocsfmask/: automask.py  masking.py  metrics.py  utils.py
