[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autocsfmask"
version = "1.0.0"
description = "Automated CSF inflow signal 4th ventricle segmentation"
requires-python = ">=3.8"
dependencies = [
    matplotlib==3.10.8
    nibabel==5.4.2
    numpy==2.4.3
    pandas==3.0.1
    scipy==1.17.1
    setuptools==65.5.0
    setuptools==69.5.1
]