[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autocsfmask"
version = "1.0.0"
description = "Automated CSF inflow signal 4th ventricle segmentation"
requires-python = ">=3.8"
dependencies = [
    "matplotlib==3.9.3",
    "nibabel==5.3.2",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "scipy==1.14.1",
    "setuptools==69.5.1"
]